--- a/kirenriaz.html
+++ b/kirenriaz.html
@@ -189,9 +189,9 @@ function Desserts() {
 
 }
 
-  $('div').on('click', function() {
-      $(this).toggleClass('show-description');
-  });
+
+onclick=this.classList.toggle("show-description")
+	}
 </script>
 
 </body>
